@@ -1,2 +1,25 @@
+Zabbix is free software, released under the GNU General Public License
+(GPL) version 2.
+
+You can redistribute it and/or modify it under the terms of the GNU GPL
+as published by the Free Software Foundation; either version 2 of the
+License, or (at your option) any later version.
+
+The formal terms of the GPL can be found at
+http://www.fsf.org/licenses/ .
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+General Public License for more details.
+
+Exception for linking with OpenSSL
+
+In addition, as a special exception, we give permission to link the code
+of Zabbix with the OpenSSL project OpenSSL library (or with modified
+versions of it that use the same license as the OpenSSL library), and
+distribute the linked executables.
+
 Please see http://www.zabbix.com/ for detailed information about Zabbix.
-On-line Zabbix documentation is available at http://www.zabbix.com/documentation/3.4/manual/installation/install .
+On-line Zabbix documentation is available at
+http://www.zabbix.com/documentation/3.4/manual/installation/install .
